k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultx-frontend
  namespace: vaultx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vaultx-frontend
  template:
    metadata:
      labels:
        app: vaultx-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/hrushi4151/vaultx-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: vaultx-frontend-service
  namespace: vaultx
spec:
  selector:
    app: vaultx-frontend
  ports:
    - port: 3000
      targetPort: 80
