k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultx-ingress
  namespace: vaultx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: vaultx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultx-frontend-service
                port:
                  number: 3000
          - path: /api/v1/face
            pathType: Prefix
            backend:
              service:
                name: vaultx-face-service
                port:
                  number: 8002
          - path: /api/v1/ocr
            pathType: Prefix
            backend:
              service:
                name: vaultx-ocr-service
                port:
                  number: 8003
          - path: /api/v1/dedup
            pathType: Prefix
            backend:
              service:
                name: vaultx-deduplication-service
                port:
                  number: 8004
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: vaultx-backend-service
                port:
                  number: 8080
